2020-01-08  Julien Bect  <julien.bect@centralesupelec.fr>

	Re-organise prediction code

	* core/stk_predict.m: Now reduced to a simple gateway that
	processes all possible calling syntaxes and then delegates to
	`stk_predict` for the actual computations, for all types of
	models.  The shorter calling syntax is now documented.
	* model/@stk_model_/stk_predict_.m: New function, that simply
	raises an error message.  Derived classes must implement it.
	* model/@stk_model_gpposterior/stk_predict.m: Renamed from.
	* model/@stk_model_gpposterior/stk_predict_.m: Renamed to.
	* model/prior_struct/stk_predict_.m: New function, which computes
	a trivial prediction for prior models.
	* model/noise/@stk_gaussiannoise_/stk_predict_.m: New function,
	which computes a trivial prediction for noise models.
	* admin/octpkg/INDEX: Update index.

	@stk_gaussiannoise_het0/stk_variance_eval.m: Fix empty x case

	* model/noise/@stk_gaussiannoise_het0/stk_variance_eval.m: Return
	the correct output when x is empty.

	stk_gaussiannoise_het0.m: Provide a default constructor

	* model/noise/@stk_gaussiannoise_het0/stk_gaussiannoise_het0.m:
	Provide a default constructor.

2020-01-07  Julien Bect  <julien.bect@centralesupelec.fr>

	Minor changes relative to `stk_isnoisy`.

	* admin/octpkg/INDEX: Classify as model property getter.
	* model/prior_struct/stk_isnoisy.m: Polish help text.

	Use `sample_size` property

	* iago/crit/private/stk_optim_crit_fig02.m: Use `sample_size` property.
	* iago/crit/private/view_samplingcrit_2d.m: Idem.
	* iago/crit/stk_optim_crit_EI.m: Idem.
	* iago/crit/stk_optim_crit_SUR.m: Idem.
	* iago/crit/stk_optim_crit_iago.m: Idem.
	* iago/rep/stk_gather_repetitions.m: Idem.
	* iago/stk_optim.m: Idem.
	* iago/stk_optimscript2.m: Idem.
	* iago/utils/stk_optim_init.m: Idem.
	* param/estim/stk_param_estim.m: Idem.
	* param/estim/stk_param_init.m: Idem.
	* param/estim/stk_param_init_lnv.m: Idem.
	* sampling/@stk_sampcrit_eqi/feval.m: Idem.