@@ -7,7 +7,7 @@
 
 % Copyright Notice
 %
-%    Copyright (C) 2015-2019 CentraleSupelec
+%    Copyright (C) 2015-2020 CentraleSupelec
 %    Copyright (C) 2014 Ashwin Ravisankar
 %    Copyright (C) 2011-2014 SUPELEC
 %
@@ -58,7 +58,7 @@ f = @(v)(crit_wrapper (model0, v, xi, zi, criterion, covparam_select, noiseparam
 
 bounds_available = (~ isempty (lb)) && (~ isempty (ub));
 
-% Sanity check (part 1)
+% Sanity check
 crit0 = f (w0);
 if ~ (isscalar (crit0) && isfinite (crit0))
     errmsg = '*** PANIC: crit0 is not a finite scalar value. ***';
@@ -73,17 +73,17 @@ else
     [w_opt, crit_opt] = stk_minimize_unconstrained (A, f, w0);
 end
 
-% Sanity check (part 2)
-if crit0 < crit_opt
-    s1 = '*** PANIC: Something went SERIOUSLY WRONG during the optimization ***';
+% Create 'model_opt' output
+if crit_opt < crit0
+    v_opt = v0;
+    v_opt(select) = w_opt;
+    model_opt = stk_set_optimizable_parameters (model0, v_opt);
+else
+    s1 = 'Something went wrong during the optimization';
     s2 = sprintf ('crit0 = %f,  crit_opt = %f:  crit0 < crit_opt', crit0, crit_opt);
-    stk_error (sprintf ('%s\n%s\n', s1, s2), 'OptimizationFailure');
+    warning (sprintf ('%s\n%s\n', s1, s2));  % FIXME: warning id
+    model_opt = model0;
 end
-
-% Create outputs
-v_opt = v0;
-v_opt(select) = w_opt;
-model_opt = stk_set_optimizable_parameters (model0, v_opt);
 
 % Create 'info' structure, if requested
 if nargout > 1
